--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@
 .s_btn a{
 	text-decoration: none;
 	color: #ffffff;
+	font-size: 15px;
 }
 .slider img{
     margin: 0 auto;
@@ -197,6 +198,23 @@
 /*work start*/
 .work{
     background-color: #F4F4F4;
+}
+.containerr{
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+}
+.containerr .boxx{
+	position: relative;
+	/*width: 300px;
+	height: 200px;*/
+	overflow: hidden;
+	transition: .5s;
+}
+.containerr .boxx:hover{
+	z-index: 1;
+	transform:scale(1.25);
+	box-shadow: 0 25px 40px rgba(0,0,0,.5) ;
 }
 .single{
 	background-color: #ffff;
